# fast-azure-agent-app

./: CLAUDE.md  Dockerfile  README.md  pyproject.toml  test.ipynb
.claude/skills/: onboard.md
app/: config.py  dependencies.py  main.py
app/agent_factory/: README.md  __init__.py  factory.py  model_registry.py  subagent_config.py  subagent_registry.py
app/core/: __init__.py  events.py
app/db/: __init__.py  postgresql.py
app/infrastructure/: __init__.py  call_backend.py  keyvault.py  manager.py  postgresql.py  redis.py  tracing.py
app/memory_agent/: README.md  __init__.py  agent.py  backend.py  design.md  schemas.py  service.py
app/opsagent/: __init__.py  factory.py  model_registry.py  settings.py
app/routes/: __init__.py  calls.py  conversations.py  evaluation.py  messages.py  models.py  settings.py  user.py
app/schemas/: __init__.py  conversation.py  evaluation.py  events.py  message.py  models.py  settings.py  user.py
app/static/: index.html
app/utils/: __init__.py  event_stream.py  workflow.py
deployment/: deploy_infra.sh  init.sql  resource.bicep
doc/: agent_factory_onboarding_plan.md  dynamic_workflow_design.md  fastapi_migration_plan.md  lean_structure_evolution.md  model_config_injection_plan.md  model_registry_refactor_plan.md  sse_streaming_architecture_analysis.md  sse_streaming_refactor_plan.md  workflow_output_event_fix.md  workflow_streaming_implementation.md
doc/fixes/: agent-token-tracking-fix.md
docs/: architecture-refactoring.md  model-selection.md
png/: design chart.md
workflow_run/: workflow_run_devui.py
(+80 files in other folders)
